--- a/WebReader/wwwroot/_resources/styles/docomb/reader.css
+++ b/WebReader/wwwroot/_resources/styles/docomb/reader.css
@@ -43,6 +43,17 @@ li > ul, li > ol {
   margin-top: 0;
   margin-bottom: 0; }
 
+sub, sup {
+  font-size: .75em;
+  position: relative;
+  vertical-align: baseline; }
+
+sup {
+  top: -0.55em; }
+
+sub {
+  bottom: -0.3em; }
+
 html body {
   background: #fff;
   color: #000; }
