--- a/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/admin.scss
@@ -173,8 +173,14 @@ html { @include lightPreset; }
 		}
 		textarea { padding: 32px; font-family: $fontFamilyMono; }
 	}
-	.preview { flex: 1 1 50%; max-width: 50%; border-left: 1px solid; @include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
+	.preview { flex: 1 1 50%; max-width: 50%; border-left: 1px solid; @include themeMap("border-color", $menuBorderColor);
 		#previewContainer { position: absolute; left: 0; top: 0; width: 100%; height: 100%; z-index: 2; overflow: auto; padding: 32px; background-color: transparent; }
+	}
+	.help {
+		flex: 0 0 400px; max-width: 30%; margin-top: -1px; border-left: 1px solid; position: relative; @include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
+		#helpContainer { position: absolute; width: 100%; height: 100%; overflow: auto; z-index: 3; padding: 16px; }
+		.helpHeading { font-size: 18px; font-weight: bold; margin-bottom: 8px; }
+		.helpSection + .helpSection { margin-top: 48px; }
 	}
 }
 
