--- a/WebAdmin/wwwroot/_resources/styles/docomb/article.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/article.scss
@@ -11,7 +11,8 @@
 		font-size: 18px;
 		letter-spacing: -1px;
 		font-style: italic;
-		@include themeMaps(("border-left-color": $menuBorderColor, "background": $menuBackgroundColor));
+		background-clip: padding-box;
+		@include themeMaps(("border-left-color": $contentHighlightBorder, "background-color": $contentHighlightBackground));
 	}
 
 
@@ -19,11 +20,12 @@
 		font-family: $fontFamilyMono;
 		border: 1px solid;
 		font-size: .9em;
-		@include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
+		background-clip: padding-box;
+		@include themeMaps(("border-color": $contentHighlightBorder, "background-color": $contentHighlightBackground));
 	}
 	pre { padding: 10px; overflow-x: auto; }
-	code { padding: 0 2px; }
-	pre > pre, code > code, pre > code, code > pre { font-size: 1em; border: none; padding: 0; margin: 0; }
+	code { padding: 0 2px; display: inline-block; }
+	pre > pre, code > code, pre > code, code > pre { font-size: 1em; border: none; padding: 0; margin: 0; background: none; }
 
 	hr {
 		margin: 30px 0;
@@ -35,18 +37,24 @@
 	}
 
 
-	table { margin-top: 15px; margin-bottom: 15px; text-align: left; border-collapse: collapse; border: 1px solid;
-		tr:hover {
-			@include themeMap("background", $menuBackgroundColor)
+	table { margin-top: 15px; margin-bottom: 15px; text-align: left; border-collapse: separate; border-spacing: 0;
+		tr:hover td {
+			background-clip: padding-box;
+			@include themeMap("background-color", $contentHighlightBackground)
 		}
-		th, td { padding: 5px 10px; border: 1px solid; vertical-align: top; }
-		th { border-bottom-width: 2px; }
-	}
-	table, table td, table th {
-		@include themeMap("border-color", $menuBorderColor);
-	}
-	table th {
-		@include themeMaps(("border-left-color": $textColorLight, "background": $menuBackgroundColor));
+		th, td {
+			padding: 5px 10px;
+			vertical-align: top;
+			background-clip: padding-box;
+			border-width: 0;
+			border-style: solid;
+			border-right-width: 1px;
+			border-bottom-width: 1px;
+			&:first-child { border-left-width: 1px; }
+			@include themeMap("border-color", $contentHighlightBorder);
+		}
+		thead:first-child th, tbody:first-child td, & > tr:first-child td { border-top-width: 1px; }
+		th { @include themeMap("background-color", $contentHighlightBackground); }
 	}
 
 	.plainTextFile { white-space: pre-wrap; border: none; background: transparent; padding: 0; }
