--- a/WebReader/wwwroot/_resources/styles/docomb/reader.scss
+++ b/WebReader/wwwroot/_resources/styles/docomb/reader.scss
@@ -126,7 +126,7 @@ header {
 		padding: 5px 0; text-align: center; border-bottom-width: 1px; border-bottom-style: solid; @include themeMap("border-bottom-color", $menuBorderColor);
 		a { display: inline-block; font-size: 14px; font-weight: bolder; margin: 5px 5px 3px 5px; padding: 5px; text-decoration: none; }
 		a span { display: block; padding-bottom: 2px; }
-		a.selected span { padding-bottom: 0; border-bottom-width: 2px; border-bottom-style: solid; @include themeMap("border-bottom-color", $textColor); }
+		a.selected span { padding-bottom: 0; border-bottom-width: 2px; border-bottom-style: solid; @include themeMap("border-bottom-color", $accentColor); }
 		@include aboveTablet { padding: 5px 15px; font-size: 18px; }
 	}
 	.pageTitle {
@@ -145,6 +145,7 @@ header {
 			 @include aboveTablet { font-size: 30px; }
 		}
 	}
+	.workspaces a:hover, .pageTitle .breadcrumbs a:hover, .pageTitle .user a { @include themeMap("color", $linkColor); }
 	@media only print
 	{
 		.workspaces { display: none !important; }
@@ -185,7 +186,7 @@ main
 
 
 	blockquote {
-		border-left: 4px solid; padding: 5px 5px 5px 15px; font-size: 18px; letter-spacing: -1px; font-style: italic;
+		border-left: 4px solid; padding: 5px 5px 5px 15px; font-size: 18px; letter-spacing: -1px;
 		@include themeMaps(("border-left-color": $menuBorderColor, "background": $menuBackgroundColor));
 	}
 
@@ -225,6 +226,18 @@ main
 
 
 
+.directoryChildSelection, .workspaceSelection {
+	display: block; margin: -5px; padding: 0; list-style: none;
+	li { display: block; margin: 0; padding: 0; list-style: none; }
+	a { display: inline-block; color: inherit; text-decoration: none; padding: 5px;
+		&:hover { @include themeMap("color", $linkColor); }
+		i { @include themeMap("color", $accentColor); font-size: 1.5em; }
+	}
+}
+
+
+
 
 
 @import "auth.scss";
+@import "shared/icons.scss";
