--- a/WebReader/wwwroot/_resources/styles/docomb/shared/theme.scss
+++ b/WebReader/wwwroot/_resources/styles/docomb/shared/theme.scss
@@ -6,8 +6,8 @@ $menuBackgroundColor: ( 'dark': #333, 'light': #eee );
 $sideBarBackgroundColor: ( 'dark': #222, 'light': #e9e9e9 );
 $menuBorderColor: ( 'dark': #494949, 'light': #c9c9c9 );
 $menuBorderColorMultiply: ( 'dark': rgba(255, 255, 255, .2), 'light': rgba(0, 0, 0, .2) );
-$linkColor: ( 'dark': #0bf, 'light': #03f );
-$accentColor: ( 'dark': #0bf, 'light': #03f );
+$linkColor: ( 'dark': #09f, 'light': #03f );
+$accentColor: ( 'dark': #09f, 'light': #03f );
 $buttonHoverColor: ( 'dark': rgba(255, 255, 255, .1), 'light': rgba(0, 0, 0, .1) );
 $buttonActiveColor: ( 'dark': rgba(255, 255, 255, .13), 'light': rgba(0, 0, 0, .13) );
 $errorColor: ( 'dark': #c00, 'light': #c00 );
