--- a/WebReader/Areas/Reader/Pages/Shared/_User.cshtml
+++ b/WebReader/Areas/Reader/Pages/Shared/_User.cshtml
@@ -6,7 +6,7 @@
 		<span class="name" title="@ViewBag.User?.Username">@ViewBag.User?.Name</span>
 		@if ((UiConfig.HasAdmin) && (ViewBag.User?.AccessLevel >= AccessLevel.Editor))
 		{
-			<span class="command"><a href="/@(UiConfig.UrlPathPrefix)/@((string.IsNullOrEmpty(ViewBag.ItemPath)) ? "" : "workspace/" + ViewBag.ItemPath)">Admin</a></span>
+			<span class="command"><a href="/@(UiConfig.UrlPathPrefix)/@((string.IsNullOrEmpty(ViewBag.ItemPath)) ? "" : "workspace/" + (ViewBag.Context?.ContentItem?.FullUrlPath ?? ViewBag.ItemPath))">Admin</a></span>
 		}
 		<span class="command"><a href="/account/logout">Log out</a></span>
 	</div>
