--- a/WebReader/wwwroot/_resources/styles/docomb/reader.scss
+++ b/WebReader/wwwroot/_resources/styles/docomb/reader.scss
@@ -198,7 +198,7 @@ main
 		@include themeMaps(("border-color": $menuBorderColor, "background": $menuBackgroundColor));
 	}
 	pre { padding: 10px; overflow-x: auto; white-space: normal; }
-	code { padding: 0 2px; }
+	code { padding: 0 2px; display: inline-block; }
 	pre > pre, code > code, pre > code, code > pre { font-size: 1em; border: none; padding: 0; margin: 0; }
 
 	hr { margin: 30px 0; border-top: 2px solid; border-left: none; border-right: none; border-bottom: none; @include themeMap("border-top-color", $textColorLight); }
