--- a/WebReader/wwwroot/_resources/styles/docomb/reader.css
+++ b/WebReader/wwwroot/_resources/styles/docomb/reader.css
@@ -413,7 +413,7 @@ main pre, main code {
 main pre {
   padding: 10px;
   overflow-x: auto;
-  white-space: normal; }
+  white-space: pre-wrap; }
 
 main code {
   padding: 0 2px;
