--- a/WebAdmin/wwwroot/_resources/styles/docomb/admin.css
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/admin.css
@@ -582,12 +582,12 @@ html .sideBarItem.selected a:before {
   padding: 0 2px;
   display: inline-block; }
 
-.articleContent pre > pre, .articleContent code > code, .articleContent pre > code, .articleContent code > pre {
+.articleContent pre pre, .articleContent code code, .articleContent pre code, .articleContent code pre {
   font-size: 1em;
   border: none;
   padding: 0;
   margin: 0;
-  background: none; }
+  background: none !important; }
 
 .articleContent hr {
   margin: 30px 0;
