--- a/WebAdmin/wwwroot/_resources/styles/docomb/article.scss
+++ b/WebAdmin/wwwroot/_resources/styles/docomb/article.scss
@@ -24,7 +24,7 @@
 	}
 	pre { padding: 10px; overflow-x: auto; white-space: pre-wrap; }
 	code { padding: 0 2px; display: inline-block; }
-	pre > pre, code > code, pre > code, code > pre { font-size: 1em; border: none; padding: 0; margin: 0; background: none; }
+	pre pre, code code, pre code, code pre { font-size: 1em; border: none; padding: 0; margin: 0; background: none !important; }
 
 	hr {
 		margin: 30px 0;
