--- a/WebReader/wwwroot/_resources/styles/docomb/reader.css
+++ b/WebReader/wwwroot/_resources/styles/docomb/reader.css
@@ -419,11 +419,12 @@ main code {
   padding: 0 2px;
   display: inline-block; }
 
-main pre > pre, main code > code, main pre > code, main code > pre {
+main pre pre, main code code, main pre code, main code pre {
   font-size: 1em;
   border: none;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  background: none !important; }
 
 main hr {
   margin: 30px 0;
